infrastructure/manifests/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: infra
  name: infra-envoy-gateway
spec:
  # For local use with k3d cluster and envoy gateway
  gatewayClassName: eg
  # For GKE use
  #gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
